# kagenti

./: .gitignore  .gitleaks.toml  .snyk  .trivyignore  AUTO-LABELING-FIX.md  CLAUDE-ORG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LADDER.md  FEATURE_ACCEPTANCE.md  GOVERNANCE.md  HYPERSHIFT-OIDC-BUG-REPORT.md  INSTALL_INSTRUCTIONS.md  MAINTAINERS.md  Makefile  PASSOVER.md  PERSONAS_AND_ROLES.md  PITCH.md  README.md  SECURITY.md  TODO_CUSTOM_VISUALIZATIONS.md  aauth-presentation-short.md  aauth-presentation.md  agent-performance-analysis.md  kagenti-use-case-brainstorm.md  package-lock.json  pyproject.toml  skill-packs.yaml  trivy.yaml
scripts/: DEMO.md  Dockerfile-agent  HOW_TO_INSTALL_ROSSOCTL.md  HOW_TO_INSTALL_ROSSOCTLX.md  HOW_TO_KOSH_GITHUB.md  KOSH-SPEC.md  KOSH_DEMO.md  agent-sandbox.sb  bob-install.sh  build-and-push-agent-image.sh  check-release-pins.sh  deploy-kosh-user-namespace.py  kagenti-teleport-setup.py  kosh  kosh-github-keycloak-setup.sh  kosh-release.py  kosh.py  litellm_sandbox_policy.yaml  pin-release-tags.sh  pyproject.toml  rossoctlx  rossoctlx.py  sandbox.sh  setup-kosh-completions.sh  sign_all_commits_in_a_branch.sh  sign_all_pr_worktrees.sh  simple_llm_test_agent.py  sync-kagenti-teleport-setup.py  teleport.sh  test-kagenti-teleport-setup.py  test-kosh-weather-service-agent-and-tool.py  test_credential_service.py
scripts/hooks/: check-windows-paths.sh
scripts/k8s/: cleanup-kagenti.sh  cleanup-rossoctl.sh  index.html  induce-mesh-outage.sh  kagenti-backend.yaml  kagenti-teleport-setup-server.yaml  mesh-recover.sh  (+2 more)
(+1774 files in other folders)
