[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kagenti-rossoctl"
version = "0.2.1"
description = "rossoctlx — CLI to manage a rossocortex budget proxy"
requires-python = ">=3.11"
# PEP 723 inline deps in rossoctlx.py are ignored by pip; declare runtime deps here.
dependencies = [
    "httpx>=0.27",
    "jinja2>=3.1",
]

[project.scripts]
# `rossoctlx` shell command -> rossoctlx.py:main(). rossoctlx.py is shipped as a
# top-level module (py-modules below), so the import target is just `rossoctlx`.
rossoctlx = "rossoctlx:main"

[tool.setuptools]
# Ship ONLY rossoctlx.py from this directory. Setting py-modules disables
# setuptools auto-discovery, so the other scripts in scripts/ are not packaged.
py-modules = ["rossoctlx"]
