[project]
name = "rossocortex-container"
version = "0.1.0"
description = "Local AuthBridge proxy wrapper for credential injection without Kubernetes"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
]

[project.scripts]
authbridge-wrapper = "authbridge_wrapper:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
